--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,19 +1,28 @@
-name: Main
+name: "Tag"
 
-on: push
+on:
+  push:
+    branches:
+      - "main"
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  create-tag:
+    name: "Create tag"
+    runs-on: "ubuntu-latest"
     steps:
-      - name: Checkout
+      - name: "Check out the repo"
         uses: actions/checkout@v3
-      - name: Build
-        run: echo ${{ github.sha }} > Release.txt
-      - name: Test
-        run: cat Release.txt
-      - name: Release
-        uses: rust-build/rust-build.action@v1.4.3
-        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: godot_key_extractor
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: "Get tag"
+        id: "get-tag"
+        shell: "bash"
+        run: |
+          echo PKG_VERSION=$(awk -F ' = ' '$1 ~ /version/ { gsub(/["]/, "", $2); printf("%s",$2) }' Cargo.toml) >> $GITHUB_OUTPUT
+
+      - name: "Set Tag"
+        shell: "bash"
+        run: |
+          git tag v${{ steps.get-tag.outputs.PKG_VERSION }} && git push --tags
+
